# BRCMToolbox_adapted

./: .ipynb  PYTHON_PORT_ADDITIONS.md  export_brcm_reference.m  original.tex  pyproject.toml  test_rui.m
_list/: .md
_notebooks/: BRCM_EnergyPlus_23_2_Best_Current.ipynb  BRCM_EnergyPlus_23_2_G5_template.ipynb  BRCM_EnergyPlus_23_2_template.ipynb  BRCM_EnergyPlus_End_to_End.ipynb
_notebooks/outputs/: README.md
brcm_5r1c_workflow/: BRCM_5R1C_Workflow.ipynb  README.md  __init__.py  example.py  workflow.py
brcm_5r1c_workflow/config/: 5r1c_defaults.json
brcm_5r1c_workflow/outputs/: model_pair_audit.json
list/: .md
matlab_validation/: README.md  export_model_configuration.m  export_simulation_results.m  run_brcm_end_to_end.m
notebooks/: BRCM_EnergyPlus_End_to_End.ipynb  BRCM_Python_MATLAB_Comparable_Validation.ipynb
origin_matlab/parity/: export_brcm_reference.m  export_case_reference.m  export_simp_reference.m  safeConvertThermalModelDataToCells.m
origin_matlab/toolbox/: BRCM_Setup.m  First Steps.txt
pre_test/: parity.ipynb
pre_test/notebooks/: BRCM_Audit.md  BRCM_Audit_Example.md  BRCM_EnergyPlus_23_2_Best_Current_Comparison copy.ipynb  BRCM_EnergyPlus_23_2_Best_Current_Comparison.ipynb  BRCM_EnergyPlus_23_2_Best_Current_Report.md  BRCM_EnergyPlus_23_2_G3b_template.ipynb  BRCM_EnergyPlus_23_2_G5_template.ipynb  BRCM_EnergyPlus_23_2_Minimal_Comparison.ipynb  BRCM_EnergyPlus_23_2_Minimal_Comparison_ablation.ipynb  BRCM_EnergyPlus_23_2_template.ipynb
pre_test/tests/: BRCM_EnergyPlus_End_to_End.ipynb  VDI6007_equations_1_31_implementation_checklist.md  (+2 more)
(+372 files in other folders)
