[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brcm"
version = "0.0.0"
description = "Python migration harness for the BRCM Toolbox"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
test = ["pytest>=7"]
excel = ["pandas>=1.5", "openpyxl>=3.1", "xlrd>=2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "pre_test/tests"]
addopts = "-ra"
